	doap:revision   "0.01"^^xsd:string ;
	asc:changes
	[
		asc:comment  "Original version."@en
	]
	.
	
:v_0.02
	a               doap:Version ;
	dc:issued       "2009-12-14"^^xsd:date ;
	doap:revision   "0.02"^^xsd:string ;
	asc:changes
	[
		asc:bugfix   "Fixed problems with build."@en
	]
	.
	
:v_0.03
	a               doap:Version ;
	dc:issued       "2009-12-15"^^xsd:date ;
	doap:revision   "0.03"^^xsd:string ;
	asc:changes
	[
		asc:bugfix   "Fixed package signature."@en ;
		asc:addition "WWW::Finger::Webfinger now provides an ->endpoint method."@en
	]
	.
	
:v_0.04
	a               doap:Version ;
	dc:issued       "2009-12-16"^^xsd:date ;
	doap:revision   "0.04"^^xsd:string ;
	asc:changes
	[
		asc:addition "Bundle a command-line query tool."@en ;
		asc:change   "Change default scheme for Webfinger from 'acct://' to 'acct:'."@en ;
		asc:bugfix   "Fingerpoint bugfix in ->graph()."@en ;
		asc:bugfix   "Unimplemented methods return empty arrays properly."@en
	]
	.
	
:v_0.05
	a               doap:Version ;
	dc:issued       "2009-12-16"^^xsd:date ;
	doap:revision   "0.05"^^xsd:string ;
	asc:changes
	[
		asc:bugfix   "Mini bug-fixes."@en ;
		asc:update   "use XRD::Parser 0.04."@en
	]
	.
	
:v_0.06
	a               doap:Version ;
	dc:issued       "2009-01-06"^^xsd:date ;
	doap:revision   "0.06"^^xsd:string ;
	asc:changes
	[
		asc:addition "Support Joe Gregorio's alternative to current Webfinger protocol."@en ;
		asc:addition "Allow fingerw command-line client to load additional modules."@en ;
		asc:update   "Improve fingerw's debugging (verbose) messages."@en ;
		asc:change   "Refactor some code from WWW::Finger::Webfinger to allow it to be used elsewhere."@en ;
		asc:addition "Follow rdf:seeAlso and ianalink:describedby links found in Webfinger account profiles."@en ;
		asc:addition "Support semantics of foaf:account and foaf:holdsAccount."@en ;
		asc:bugfix   "Fix duplicated mbox in WWW::Finger::CPAN."@en ;
		asc:update   "Use Turtle for Changes file."@en
	]
	.

		