@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 0ef2cea659975afaa3e1115c38996877497287ea Changes
-SHA1 f5e95089c3f896442993c0910f907564f2f2a1e6 Changes.xml
-SHA1 f4734ea63d80844f79001c6a96ce419955da71c7 MANIFEST
+SHA1 d201881919e8d59355b0dddcf98d65ca55307977 Changes
+SHA1 869d6bf89d67ce1a9bda20c294e5944309073f63 Changes.xml
+SHA1 2965c0506e7605cd2d63677ad415b13b12d21d9a MANIFEST
 SHA1 29068ccf9327104f9372114ad2a96f108eb8699c MANIFEST.SKIP
-SHA1 c1717f6b347f5bd86aa28a1696d86ae70ad7a0a3 META.yml
+SHA1 841a205b866ea1915eedff8e7eb6be6812a45108 META.yml
 SHA1 6e5e8e62e185c617bf62c742c412d4d46bb915db Makefile.PL
-SHA1 ec634488ad8c617998523399af135a784f4ea60e README
+SHA1 0651470375eabab5e2e1c723453b017f70adcd75 README
 SHA1 e5fb92ac217988bfc7a6af739b0459627020a27e inc/Module/AutoInstall.pm
 SHA1 fd5f3c4f0418efee3b9b16cf8c3902e8374909df inc/Module/Install.pm
 SHA1 5c529e96420d964b192f011b121283a4916f7331 inc/Module/Install/AutoInstall.pm
@@ -35,17 +35,18 @@ SHA1 3406c9015148c75406903e7382f8182613b5022a inc/Module/Install/Scripts.pm
 SHA1 f7ee667e878bd2faf22ee9358a7b5a2cc8e91ba4 inc/Module/Install/Win32.pm
 SHA1 8ed29d6cf217e0977469575d788599cbfb53a5ca inc/Module/Install/WriteAll.pm
 SHA1 1e6399a0585817abef500c34fce676fb9b0545f0 inc/Test/Signature.pm
-SHA1 e41b3b8b6fa425eb621354cd45367025cbf73508 lib/WWW/Finger.pm
-SHA1 34fb8ad723ee5650f7eaf42246a02aee92b03eff lib/WWW/Finger/CPAN.pm
-SHA1 0ec1e7d8e5e3090f18593658da5a0b32933e7080 lib/WWW/Finger/Fingerpoint.pm
-SHA1 9008cda8f2cc3165380b51e1c0219a5414333fda lib/WWW/Finger/Webfinger.pm
+SHA1 63be2bea1a7dee3d7248d9f987f06ac5d0e94bdf lib/WWW/Finger.pm
+SHA1 c5901fcc7f0d4b5e4d36fddde875ab708f266cc4 lib/WWW/Finger/BitworkingFingerProtocol.pm
+SHA1 acd41a4931da986720a7c5cc88f0074ba0df0023 lib/WWW/Finger/CPAN.pm
+SHA1 2b3964533bb3c20ad04373185ab5ef0d425b9176 lib/WWW/Finger/Fingerpoint.pm
+SHA1 a3113b46f1f5a907d1532f46fedd9363bbc0a92b lib/WWW/Finger/Webfinger.pm
 SHA1 4953140b0f8ae4a6a1154c037c0110164f26f4f5 script/fingerw
 SHA1 bb128dce2db8ad397dbeb957d79d084cc5d2391a t/00sig.t
 SHA1 57c65c5eec7225491bff72c6137c9edc77dac8f2 t/WWW-Finger.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.10 (GNU/Linux)
 
-iEYEARECAAYFAktEuhcACgkQzr+BKGoqfTmy2ACdF+fO9q+V3gJmt0wutJ5dnAlQ
-l5QAn0ZuDYpjAiCMsF45bBpNf/BEYDEx
-=qFMo
+iEYEARECAAYFAktE2AIACgkQzr+BKGoqfTnSYACgqPqiKz2oGtEA4+vGyg4Cu7xL
+gl0An0N0NMuUN1nTzQ2YhutdtFzdMj+J
+=QvuH
 -----END PGP SIGNATURE-----
