@@ -8,7 +8,7 @@ use LWP::Simple;
 use WWW::Finger;
 
 our @ISA = qw(WWW::Finger);
-our $VERSION = '0.06';
+our $VERSION = '0.07';
 
 BEGIN
 {
@@ -153,7 +153,7 @@ WWW::Finger::CPAN - WWW::Finger implementation which scrapes cpan.org.
 
 =head1 VERSION
 
-0.06
+0.07
 
 =head1 DESCRIPTION
 
@@ -175,7 +175,7 @@ Toby Inkster, E<lt>tobyink@cpan.orgE<gt>
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright (C) 2009 by Toby Inkster
+Copyright (C) 2009-2010 by Toby Inkster
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.8.1 or,
