@@ -102,5 +102,14 @@
 		asc:update   "Use Turtle for Changes file."@en
 	]
 	.
-
 		
+:v_0.07
+	a               doap:Version ;
+	dc:issued       "2009-01-06"^^xsd:date ;
+	doap:revision   "0.07"^^xsd:string ;
+	asc:changes
+	[
+		asc:bugfix   "Include BitworkingFingerProtocol.pm in MANIFEST."@en ;
+		asc:update   "Update copyright noticed to 2010."@en
+	]
+	.
